--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "nikic/php-parser": "^5.4",
         "phpdocumentor/reflection-docblock": "^5.6",
+        "phpro/grumphp-shim": "^2.12",
         "phpstan/phpdoc-parser": "^2.1",
         "ramsey/uuid": "^4.7",
         "ramsey/uuid-doctrine": "^2.1",
@@ -32,6 +34,7 @@
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
+            "phpro/grumphp-shim": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -81,7 +84,9 @@
     },
     "require-dev": {
         "fig/log-test": "^1.1",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.0",
+        "squizlabs/php_codesniffer": "^3.12",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
         "symfony/phpunit-bridge": "^7.2"
