--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,14 +1,14 @@
 grumphp:
   tasks:
-    #    phpstan:
-    #      autoload_file: ~
-    #      configuration: ~
-    #      level: null
-    #      force_patterns: [ ]
-    #      ignore_patterns: [ ]
-    #      triggered_by: [ 'php' ]
-    #      memory_limit: "-1"
-    #      use_grumphp_paths: true
+    phpstan:
+      autoload_file: ~
+      configuration: ~
+      level: null
+      force_patterns: [ ]
+      ignore_patterns: [ 'tests' ]
+      triggered_by: [ 'php' ]
+      memory_limit: "-1"
+      use_grumphp_paths: true
     phpcs:
       standard: PSR2
       whitelist_patterns:
