--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,8 +1,6 @@
+includes:
+    - phpstan-baseline.neon
 parameters:
     level: 5
     paths:
-        - bin/
-        - config/
-        - public/
         - src/
-        - tests/
